--- a/index.html
+++ b/index.html
@@ -97,11 +97,13 @@
 <div class="card" id="mainCard">
     <div style="font-size: 40px;">🐱‍💗</div>
 
-    <h2>Asif, my baby,<br>Will you be my valentine?</h2>
+    <h2><p>Can I have you for another 6 months… and maybe more? ❤️</p>
+</h2>
 
     <button class="yes-btn" id="yesBtn">Yes ✨💖</button>
 
-    <button class="no-btn" id="noButton">No 🙈</button>
+   <button id="noBtn">No 🔪</button>
+
 
     <div class="note">Try clicking "No" 😉</div>
 </div>
@@ -111,7 +113,8 @@
 </div>
 
 <script>
-    const noBtn = document.getElementById("noButton");
+ const noBtn = document.getElementById("noBtn");
+
     const yesBtn = document.getElementById("yesBtn");
     const mainCard = document.getElementById("mainCard");
     const yesMessage = document.getElementById("yesMessage");
