--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Be My Valentine</title>
+<title>For Asif 💗</title>
 
 <style>
     body {
@@ -33,13 +33,6 @@
         color: #ff2f87;
         margin-bottom: 25px;
         line-height: 1.4;
-    }
-
-    p {
-        color: #ff1570;
-        font-size: 17px;
-        margin-top: -10px;
-        margin-bottom: 30px;
     }
 
     .yes-btn {
@@ -73,10 +66,10 @@
         color: #ff2f87;
         font-weight: bold;
         text-align: center;
-        line-height: 1.4;
+        line-height: 1.5;
         z-index: 20;
         position: absolute;
-        top: 40%;
+        top: 35%;
         width: 90%;
     }
 
@@ -99,9 +92,7 @@
 <div class="card" id="mainCard">
     <div style="font-size: 40px;">🐱‍💗</div>
 
-    <h2>Asif, my baby,<br>Will you be my valentine?</h2>
-
-    <p>Can I have you for another 6 months… and maybe more? ❤️</p>
+    <h2>Can I have you for another 6 months… and maybe more? ❤️</h2>
 
     <button class="yes-btn" id="yesBtn">Yes 💖</button>
 
@@ -131,7 +122,7 @@
         noBtn.style.top = newY + "px";
     });
 
-    // YES BUTTON ACTION
+    // YES BUTTON
     yesBtn.addEventListener("click", () => {
         mainCard.style.display = "none";
         yesMessage.style.display = "block";
